--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -1,22 +1,209 @@
 \thesischapter{Background: The European Rail Traffic Management System}
 \label{chapter:ERTMS}
 
-Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communications in the form of GSM radio to gain a much finer control than the traditional discrete solid state interlocking than their boolean track circuits alone would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the traditional discrete control systems of the railway with continuous systems. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the traditional interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). In this system every train has a movement authority which allocates it a length of track within which it can move. The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. The trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of behaviour (See \ref{sec:theertms}.) that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however an interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system. An overview of the ERTMS system can be found in the ETCS implementation handbook \cite{ETCSHB} and an indepth description of the system can be found in the ETCS System Requirements Specification \cite{ETCSSRS}.
+Following the successful use of the solid state interlocking for over 30 years railway engineers are  employing modern technologies to develop a new kind of train control system.  Technologies such as GPS and mobile data communications, in the form of GSM radio,  allow for  a much finer grain of control than the traditional discrete solid state interlocking and  boolean track circuits alone would allow. 
+This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the traditional discrete control systems of the railway with modern systems that can deal with more continuous. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the traditional interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). In this system every train has a movement authority which allocates it a length of track within which it can move. The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. Each individual train has an onboard system which restricts its speed to follow this profile and ensures that the train will have braked and stopped before reaching the end of its movement authority. The on board system has an emergency braking mode incase one of these conditions is broken. The trains are free to move along the  track within their current MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of implementation (See \ref{sec:theertms}.) that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however the interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system. An overview of the ERTMS system can be found in the ETCS implementation handbook \cite{ETCSHB} and an indepth description of the system can be found in the ETCS System Requirements Specification \cite{ETCSSRS}.
+
+\afterpage{
+\begin{center}
+\begin{figure}[p]
+
+\begin{sideways}
+
+
+\begin{tikzpicture}
+
+%%% Y Axis
+
+\draw [->]
+(-5 , 4) -- (-5,7)
+node [left,text width=3cm,text centered,midway]
+{ \hfill \\
+VMax \\
+(Limit of \\
+Authority)
+};
+
+%%% X Axis
+
+\draw [->]
+(-5 , 4) -- (14,4)
+node [below,text width=3cm,text centered,midway]
+{ \hfill \\
+Position
+};
+
+
+%%%% LoA Graph
+
+\draw ( -2.80, 7) -- (-1, 7);
+
+
+\draw(-1, 7) .. controls +(2 cm , - 0 cm) and +(-2 cm, 1.5 cm)
+..  (8 , 4 );
+
+%%% EoA
+
+\draw [->]
+(8 , 7) -- (8,5)
+node [right,text width=3cm,text centered,midway]
+{ \hfill \\
+End of Authority
+};
+
+
+
+
+% Top Track
+
+
+\draw (-5.10,2) -- (14, 2);
+
+% Far Left Signal
+
+\draw (-5,2) -- (-5, 2.25);
+\draw (-5,2.25) -- (-4.75, 2.25);
+
+\filldraw [red](-4.70, 2.25) circle (2pt) ;
+\filldraw [black](-4.55, 2.25) circle (2pt) ;
+\filldraw [black](-4.40, 2.25) circle (2pt);
+
+% Mid Left  Signal
+
+\draw (-1,2) -- (-1, 2.25);
+\draw (-1,2.25) -- (-0.75, 2.25);
+
+\filldraw [black](-0.70, 2.25) circle (2pt) ;
+\filldraw [black](-0.55, 2.25) circle (2pt) ;
+\filldraw [green](-0.40, 2.25) circle (2pt);
+
+% Centre Signal
+
+
+\draw (4,2) -- (4, 2.25);
+\draw (4,2.25) -- (4.25, 2.25);
+
+\filldraw [black](4.40, 2.25) circle (2pt) ;
+\filldraw [yellow](4.55, 2.25) circle (2pt) ;
+\filldraw [black](4.70, 2.25) circle (2pt);
+
+
+% Mid Right Signal 
+
+\draw (8,2) -- (8, 2.25);
+\draw (8,2.25) -- (8.25, 2.25);
+
+\filldraw [red](8.40, 2.25) circle (2pt) ;
+\filldraw [black](8.55, 2.25) circle (2pt) ;
+\filldraw [black](8.70, 2.25) circle (2pt);
+
+% Far Right Signal 
+
+\draw (12,2) -- (12, 2.25);
+\draw (12,2.25) -- (12.25, 2.25);
+
+\filldraw [black](12.40, 2.25) circle (2pt) ;
+\filldraw [black](12.55, 2.25) circle (2pt) ;
+\filldraw [green](12.70, 2.25) circle (2pt);
+
+
+
+% Block Divisions
+
+\draw (-4.10, 1.90) -- (-4.10 , 2.10);
+
+\draw(-3.10, 1.90) -- (-3.10 , 2.10);
+
+\draw(-2.10, 1.90) -- (-2.10, 2.10);
+
+
+
+
+\draw(-1.30, 1.90) -- (-1.30, 2.10);
+
+
+
+\draw(0.625, 1.90) -- (0.625, 2.10);
+
+
+
+
+\draw(3, 1.90) -- (3, 2.10);
+
+
+\draw(5, 1.90) -- (5, 2.10);
+
+\draw(7, 1.90) -- (7, 2.10);
+
+\draw(9, 1.90) -- (9, 2.10);
+
+\draw(11, 1.90) -- (11, 2.10);
+
+\draw(13, 1.90) -- (13, 2.10);
+
+
+
+% Train 1
+
+\draw [->]
+(-2.80,1.4) -- (-2.80,1.8)
+node [below,text width=3cm,text centered,midway]
+{ \hfill \\
+Train 1
+};
+
+% Train 2
+
+\draw [->]
+(10,1.4) -- (10,1.8)
+node [below,text width=3cm,text centered,midway]
+{ \hfill \\
+Train 2
+};
+
+\end{tikzpicture}
+
+\end{sideways}
+\centering
+
+ \caption{Movement Authorities in ERTMS Level 1}
+\label{fig:trackplan}
+\end{figure}
+\end{center}
+
+}
 
 
 \section{The European Rail Traffic Management System}
+We shall now describe the ERTMS system in more detail. To do this we shall first discuss the movement authority and static speed profile as these are key entities used for the control of the train. Following this we shall discuss the behaviour of ERTMS at its different levels of implementation. Finally we shall look at the interface between the radio block processor and the interlocking in more detail.
+
+\subsection*{Movement Authority}
+In comparison with the traditional which controlled the movement of trains using coloured light signals, the ERTMS system transmits a movement authority to the train which authorises it to travel along a length of track. There are two different components of a movement authority which are used to restrict the movement of a train along a piece of track, the train can operate safely with either one of them on its own (See Figure \ref{fig:trackplan}).
+\begin{description}
+
+\item[End of Authority (EoA)] is the end of the movement authority for a train on a given piece of track. It is a point which the train can not proceed past along that track.
+
+\item[Limit of Authority (LoA)]
+ is a train's maximum allowed velocity (VMax) at a position on a piece of track and is calculated using braking curves.
+
+\end{description}
+
+The on-board control system will automatically apply the brakes if the train exceeds either type of movement authority.
+
+
+\subsection*{Static Speed Profile}
+Traditionally the speed limit along a segment of track was controlled by a combination of speed limit signs at the side of the tracks and coloured light signals. In ERTMS this has been replaced by a \emph{static speed profile} which provides the control system on the train with a maximum speed for a given section of track. Each type of train has its own static speed profile depending what it is capable of, for instance a high speed intercity train will have a different static speed profile from a fully loaded freight train. Providing the trains with a static speed profile increases safety further by making speeding less likely and allows for a finer control of the train's speed, thus increasing the capacity of the line.
+
+
+
 \label{sec:theertms}
 \subsection*{ERTMS levels}
-ERTMS is seperated into different levels of implementation. These range from being a compliment to traditional signalling to a complete replacement for it. Currently both, level 1 and 2, have been implemented in different parts of the world and level 3 is still in the conceptual phase and has yet to be implemented anywhere.
+ERTMS is seperated into different levels of implementation. These range from being a compliment to traditional signalling to a complete replacement. Currently both, level 1 and 2, have been implemented in different parts of the world and level 3 is still in the conceptual phase and has yet to be fully implemented anywhere in the world.
 
 \textbf{ERTMS Level 1:} (Figure \ref{fig:ERTMSLevel1}) Movement authorites are calculated based on the underlying signalling system and then transmitted from the trackside to the train through the use of an electronic beacon called an Eurobalise.  The Eurobalise also enables train detection at the trackside and passes relevant information regarding train movement via the landside equipment unit (LEU) to the interlocking and signalling centre. While this level makes use of an interlocking,  it does not make use of a radio block controller unlike later levels of ERTMS.  \\
 
-
-
 \begin{center}
 \begin{figure}[h!]
-
-
 
 
 \begin{tikzpicture}[scale = 1.5]
@@ -115,7 +302,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{figure}
 \end{center}
 
-\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to still run on the  track but coloured light signals can be removed if no such trains are running. Movement authorities are calculated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continuously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train, which in return provides its location relative to a given balise. This transmission is complemented by on-the-spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. \
+\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to still run on the  track but coloured light signals can be removed if no such trains are running. Movement authorities are calculated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continuously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train, which in return provides its location relative to a given balise. This transmission is complemented by on-the-spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. 
 
 
 
@@ -343,197 +530,18 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{center}
 
 
-\subsection*{Static Speed Profile}
-Traditionally the speed limit along a segment of track was controlled by a combination of speed limit signs at the side of the tracks. In ERTMS this has been replaced by a \emph{static speed profile} which provides the control system on the train with a maximum speed for a given section of track. Each type of train has its own static speed profile depending what it is capable of, for instance a high speed intercity train will have a different static speed profile from a fully loaded freight train. Proving the trains with a static speed profile increases safety further by making speeding less likely and allows for a finer control of the train's speed increasing the capacity of the line.
-
-\afterpage{
-\begin{center}
-\begin{figure}[p]
-
-\begin{sideways}
-
-
-\begin{tikzpicture}
-
-%%% Y Axis
-
-\draw [->]
-(-5 , 4) -- (-5,7)
-node [left,text width=3cm,text centered,midway]
-{ \hfill \\
-VMax \\
-(Limit of \\
-Authority)
-};
-
-%%% X Axis
-
-\draw [->]
-(-5 , 4) -- (14,4)
-node [below,text width=3cm,text centered,midway]
-{ \hfill \\
-Position
-};
-
-
-%%%% LoA Graph
-
-\draw ( -2.80, 7) -- (-1, 7);
-
-
-\draw(-1, 7) .. controls +(2 cm , - 0 cm) and +(-2 cm, 1.5 cm)
-..  (8 , 4 );
-
-%%% EoA
-
-\draw [->]
-(8 , 7) -- (8,5)
-node [right,text width=3cm,text centered,midway]
-{ \hfill \\
-End of Authority
-};
-
-
-
-
-% Top Track
-
-
-\draw (-5.10,2) -- (14, 2);
-
-% Far Left Signal
-
-\draw (-5,2) -- (-5, 2.25);
-\draw (-5,2.25) -- (-4.75, 2.25);
-
-\filldraw [red](-4.70, 2.25) circle (2pt) ;
-\filldraw [black](-4.55, 2.25) circle (2pt) ;
-\filldraw [black](-4.40, 2.25) circle (2pt);
-
-% Mid Left  Signal
-
-\draw (-1,2) -- (-1, 2.25);
-\draw (-1,2.25) -- (-0.75, 2.25);
-
-\filldraw [black](-0.70, 2.25) circle (2pt) ;
-\filldraw [black](-0.55, 2.25) circle (2pt) ;
-\filldraw [green](-0.40, 2.25) circle (2pt);
-
-% Centre Signal
-
-
-\draw (4,2) -- (4, 2.25);
-\draw (4,2.25) -- (4.25, 2.25);
-
-\filldraw [black](4.40, 2.25) circle (2pt) ;
-\filldraw [yellow](4.55, 2.25) circle (2pt) ;
-\filldraw [black](4.70, 2.25) circle (2pt);
-
-
-% Mid Right Signal 
-
-\draw (8,2) -- (8, 2.25);
-\draw (8,2.25) -- (8.25, 2.25);
-
-\filldraw [red](8.40, 2.25) circle (2pt) ;
-\filldraw [black](8.55, 2.25) circle (2pt) ;
-\filldraw [black](8.70, 2.25) circle (2pt);
-
-% Far Right Signal 
-
-\draw (12,2) -- (12, 2.25);
-\draw (12,2.25) -- (12.25, 2.25);
-
-\filldraw [black](12.40, 2.25) circle (2pt) ;
-\filldraw [black](12.55, 2.25) circle (2pt) ;
-\filldraw [green](12.70, 2.25) circle (2pt);
-
-
-
-% Block Divisions
-
-\draw (-4.10, 1.90) -- (-4.10 , 2.10);
-
-\draw(-3.10, 1.90) -- (-3.10 , 2.10);
-
-\draw(-2.10, 1.90) -- (-2.10, 2.10);
-
-
-
-
-\draw(-1.30, 1.90) -- (-1.30, 2.10);
-
-
-
-\draw(0.625, 1.90) -- (0.625, 2.10);
-
-
-
-
-\draw(3, 1.90) -- (3, 2.10);
-
-
-\draw(5, 1.90) -- (5, 2.10);
-
-\draw(7, 1.90) -- (7, 2.10);
-
-\draw(9, 1.90) -- (9, 2.10);
-
-\draw(11, 1.90) -- (11, 2.10);
-
-\draw(13, 1.90) -- (13, 2.10);
-
-
-
-% Train 1
-
-\draw [->]
-(-2.80,1.4) -- (-2.80,1.8)
-node [below,text width=3cm,text centered,midway]
-{ \hfill \\
-Train 1
-};
-
-% Train 2
-
-\draw [->]
-(10,1.4) -- (10,1.8)
-node [below,text width=3cm,text centered,midway]
-{ \hfill \\
-Train 2
-};
-
-\end{tikzpicture}
-
-\end{sideways}
-\centering
-
- \caption{Movement Authorities in ERTMS Level 1}
-\label{fig:trackplan}
-\end{figure}
-\end{center}
-
-}
-\subsection*{Movement Authority}
-There are two different types of movement authorities used to restrict the movement of a train along a piece of track (See Figure \ref{fig:trackplan}).
-\begin{description}
-
-\item[End of Authority (EoA)] is the end of the movement authority for a train on a given piece of track. It is a point which the train can not proceed past along that track.
-
-\item[Limit of Authority (LoA)]
- is a train's maximum allowed velocity (VMax) at a position on a piece of track and is calculated using breaking curves.
-
-\end{description}
-
-The on-board control system will automatically apply the brakes if the train exceeds either type of movement authority.
-
 
 
 
 
 \subsection*{An Informal Description of the Combined System}
-In the following we will present a high level description of the combined interlocking and radio block processor system.
-The aim of specifying a combined system is to get rid of the inconsistencies and problems caused by the interface between the RBC and interlocking.  These are two seperate control systems each with its method of communicating instructions to the train. The interlocking acts a small safety kernel in the traditional train control system which should also be the case in the combined system, it must have the final say on any instruction to the trains or railtrack. If this is not the case then we may end up in a situation where a train is in a safe position according to one system but not the other. A prime example of such an inconsistency occurs when a high speed ERTMS enabled train travels along a line, under the guidance of a movment authority and is allowed to travel through an ordinary red light.  
+In the following we will present a high level description of the combined interlocking and radio block processor system. The aim of specifying a combined system is to get rid of the inconsistencies and problems caused by the interface between the RBC and interlocking.  These are two seperate control systems each with its method of communicating instructions to the train. The interlocking acts a small safety kernel in the traditional train control system which should also be the case in the combined system, it must have the final say on any instruction to the trains or railtrack. If this is not the case then we may end up in a situation where a train is in a safe position according to one system but not the other. A prime example of such an inconsistency occurs when a high speed ERTMS enabled train travels along a line, under the guidance of a movment authority and is allowed to travel through an ordinary red light.  
+
+
+
+
+ The components of the system in which we are particularily interested to capture can be found inside the dotted line in figure \ref{fig:ERTMSCombine}. These consist of the interlocking and radio block processor. Currently the interface between them is biased in one direction, most of the information travels from the interlocking to the radio block processor. Some information does go in the other direction; for example the radio block centre will notify the interlocking when a ERTMS enabled train is travelling along the line.  However, other possibilities for a partition in a combined system exist, for example the route setting and releasing could take place in the radio block centre. There are also different possibilities from the level of partitioning or integration of the system, it could be the case that a fully integrated system is much simplier, however such a system would have to be constructed from scratch. 
+
 
 
 \begin{center}
@@ -607,34 +615,6 @@ The aim of specifying a combined system is to get rid of the inconsistencies and
 \label{fig:ERTMSCombine}
 \end{figure}
 \end{center}
-
-
- The components of the system which we are trying to capture can be found inside the dotted line in figure \ref{fig:ERTMSCombine}. These consist of the interlocking and radio block processor. Currently the interface between them is biased in one direction, most of the information travels from the interlocking to the radio block processor. Some information does go in the other direction; for example the radio block centre will notify the interlocking when a ERTMS enabled train is travelling along the line.  However, other possibilities for a partition in a combined system exist, for example the route setting and releasing could take place in the radio block centre. There are also different possibilities from the level of partitioning/ integration of the system, it could be the case that a fully integrated system is much simplier, however such a system would have to be constructed from scratch. 
-
-
-
-We will make the following assumptions in the modelling of the combined system:
-
-\begin{itemize}
-
-\item We assume that positioning works and that the location of the trains is known at all times.
-
-\item We assume that all trains are fitted with the ERTMS system.
-
-\item We will only work with one radio block controller. Trains are assumed to enter and exit the controlled area.
-
-
-\end{itemize}
-
-As part of this project we will also have to formalise new safety properties for the combined system. Some of examples of these are as follows:
-
-\begin{itemize}
-
-\item A point should not move if it is in a movement authority
-
-\item Two trains should not have over-lapping movement authorities
-
-\end{itemize}
 
 
 \section{Typical  ERTMS Scenario}
@@ -774,9 +754,8 @@ We will assume that initially no routes are set. This means that either a contro
 \label{fig:trackplandd}
 \end{figure}
 
-\subsection*{Scenario}
-We shall now describe the behaviour of trains and their interaction with the ERTMS system as they negotiate their way through the double junction. The UML message sequence chart (See fig \ref{fig:seqChart}) shall compliment this description for the first two trains. Firstly the Radio Block processor, which is executing the timetable, makes a request to the interlocking to set the route from $D \to C$, since this is currently safe the interlocking will grant the route assignment. Next the RBC sets the points, via the interlocking and trackside infrastructure, and the points respond with an acknowledgement indicating that they have been set. The RBC then grants a movement authority to the train which allows it to move from $D \to C$ which the train acknowledges. Then train then moves from $D \to C$, whilst continually transmitting its position to the RBC.
-
+\subsection*{Scenario Behaviour}
+We shall now describe the behaviour of trains and their interaction with the ERTMS system as they negotiate their way through the double junction. The UML message sequence chart (See Fig \ref{fig:seqChart}) shall compliment this description by describing the communication sequence for the movement of the first two trains. Firstly the Radio Block processor, which is executing the timetable, makes a request to the interlocking to set the route from $D \to C$, since this is currently safe the interlocking will grant the route assignment. Next the RBC sets the points, via the interlocking and trackside infrastructure, and the points respond with an acknowledgement indicating that they have been set. The RBC then grants a movement authority to the train which allows it to move from $D \to C$ which the train acknowledges. Then train then moves from $D \to C$, whilst continually transmitting its position to the RBC. Once this movement authority has been granted the RBC can then negotiate and grant another movement authority for train $2$ to move from $A \to B$ as its path does not cross that of train $1$. Once train $2$ has passed the second point on its journey  from $A \to B$ and train one has exited at $C$ , the RBC can negotiate and grant a movement authority for train $3$ to move from $F \to C$.
 \begin{figure} [h!]
 
 \begin{center}
@@ -810,7 +789,7 @@ We shall now describe the behaviour of trains and their interaction with the ERT
 
 \draw[->](0,7.5) -- node[above, font = \small]{MA D $\to$ C} (6, 7.5);
 \draw[<-](0, 7) -- node[above, font = \small]{MA Ack} (6, 7);  
-\draw[<-](0, 6.5) -- node[above, font = \small]{Position Rep} (6, 6.5);  
+\draw[<-](0, 6.5) -- node[above, font = \small]{Position Data} (6, 6.5);  
 
 
 \draw[->](0, 5) -- node[above, font = \small ]{Route Req} (2, 5);
@@ -821,8 +800,10 @@ We shall now describe the behaviour of trains and their interaction with the ERT
 \draw[<-](0, 3.5) -- node[above, font = \small]{} (4, 3.5);  
 \draw[-](0,3) -- node[above, font = \small]{MA A $\to$ B} (2, 3);
 \draw[->](0,3) -- node[above, font = \small]{} (8, 3);
-
-
+\draw[-](0,2.5) -- node[above, font = \small]{MA Ack} (2,2.5);
+\draw[<-](0,2.5) -- (8,2.5);
+\draw[-](0,2) -- node[above, font = \small]{Position Data} (2,2);
+\draw[<-](0,2) -- (8,2);
 
 
 %\draw [arrow] (0,9) -- node[above = 7pt] {Comm Sess Init} (7 ,7 );
