--- a/Introduction.tex
+++ b/Introduction.tex
@@ -3,22 +3,27 @@
 
 \section{Motivation}
 
-This thesis is concerned with the application of formal methods within the Railway Domain and to the tools used when applying formal methods themselves. Firstly we present a new approach to develop verified SAT solving algorithms and which have been applied the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise and model the European Rail Traffic Management System (ERTMS) and apply a model checker to verify the systems safety.
+This thesis is concerned with the application of formal methods within the Railway Domain and to the tools used when applying formal methods themselves. Firstly we present a new approach to develop verified SAT solving algorithms and which have been applied the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise and model the European Rail Traffic Management System (ERTMS) and apply a model checker to verify the system's safety.
 
 A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly. The answer to this question is more elusive than it may seem initially. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manor, due to the fact that most modern systems have a large number of inputs and testing each possible combination is not feasible. This problem is further compounded when several systems are operating in paralell and communicating with each other.
 
 One of the most famous and costly errors to ocurr was that of the Ariane 5 flight 501\cite{GL97}. A 64-bit floating point number representing horizontal velocity was converted into an 16-bit signed integer resulting in an overflow and a hardware exception being raised. The control system interpreted the hardware exception as position and velocity data which lead it to fly on a self destructive trajectory. Another example of a flawed computer system is "Chip and PIN" smart cards secured by the EMV protocol \cite{JM10}. It is supposed to be the case that only someone with the 4 digit personal identification number (PIN) can make payments with the cards, however it is possible for a fraudster to perform a man-in-the-middle attack and to trick the terminal into believing the PIN was correctly entered when no PIN was entered at all. With over 730 million smart cards in circulation this posses a significant threat the to security of many peoples finances. Both of these problems were avoidable. In the case of the Ariane rocket all that would have been required was an extra line of code or two to prevent the variable over-flowing. Many other variables in the code had been protected against over-flow in this way, it was simply over looked in the case of this particular variable.
 
 
-Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and formal specification which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manor. These formal methods however do not make testing redundant, for example, would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified. Another problem is that manual formal verification requires a large amount of technical ability to perform and is time . There are a number of automatic verification techniques, however these are typically not complete. One area that automatic techniques do perform well in is that of verifying large but logically uncomplex systems, which do occur in industry. It is also beneficial if these systems are part of a product line, then a single methodology may be developed to verify all of the systems. 
+Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and formal specification which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manor. These formal methods however do not make testing redundant, for example, would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified. Another problem is that manual formal verification requires a large amount of technical ability to perform and in addition time consuming. There are a number of automatic verification techniques, however these are typically not complete in the sense that they are not guarateed to produce an output for every possible input. One area that automatic techniques do perform well in is verifying large but logically uncomplex systems, which do occur in industry. It is also beneficial if these systems are part of a product line, if that is the case then a customised verification approach may be developed that exploits similarities between individual implementations of the system.
 
-One such automatic verification technique is SAT based model checking which attempts to exhaustively search the state space of the system and check that a safety property holds in each individual state. This is done by formulating the model checking problem as a boolean satisfaction problem and then applying SAT solver to do the search. These SAT solvers have the advantage that they are highly optimised and are typically faster at solving any boolean satisfaction problem, off the shelf, than any proprietary software. The low level and complex nature of many SAT solver optimisations also makes it harder to reason about the solvers correctness. This causes a probem when such solvers are used in a safety critical environment where their results must be trustworthy. Besides the correctness also
+One such automatic verification technique is SAT based model checking which attempts to exhaustively search the state space of the system and check that a safety property holds in each individual state. This is done by formulating the model checking problem as a boolean satisfaction problem and then applying a SAT solver to do the search. These SAT solvers have the advantage that they are highly optimised and are typically faster at solving any boolean satisfaction problem, without any problem specific customisation, than any proprietary software. The low level and complex nature of many SAT solver optimisations also makes it harder to reason about the solver's correctness. This causes a probem when such solvers are used in a safety critical environment where their results must be trustworthy. Besides the correctness also
 totality (or universality) of SAT solvers is an issue. For example, in the 2012 SAT competition (www.smtcomp.org) many systems were not total in the sense that they returned
 "Unknown" for certain inputs signifying that they could not deal with the given problem. 
 
+
+Another approach to formal verification is that of interactive theorem proving. \textbf{give general introduction to interactive theorem proving followed by program extraction.}
+\begin{comment}
 \textbf{Note: Add something about program extraction here.}
 Alternatively to automatic techniques for verification there are also interactive theorem provers which employ man-machine collaboration in order to prove properties over a system.
 Program extraction is another verification technique which allows the production of correct by construction computer programs. It is based around the Curry-Howard correspondence \cite{} which states that constructive proofs performed using the natural deduction calculus can be viewed as programs in the lambda calculus. 
+\end{comment}
+
 
 The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively uncomplex and every interlocking developed has to comply to the same range of safety requirements.  We have developed a Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System. This developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desireable to understand possible behaviours and to ensure safe integration with existing infrastructure.
 
