--- a/Introduction.tex
+++ b/Introduction.tex
@@ -17,7 +17,7 @@ totality (or universality) of SAT solvers is an issue. For example, in the 2012 
 "Unknown" for certain inputs signifying that they could not deal with the given problem. 
 
 
-Another approach to formal verification is that of interactive theorem proving. \textbf{give general introduction to interactive theorem proving followed by program extraction.}
+Another approach to formal verification is that of interactive theorem proving where a tool aids with the human driven construction of a formal proof of correctness for a system. These have the advantage that the machine can check the human produced proof and they typically include a number of built in tactics that in the construction of a proof. Some interactive theorem provers realise the Curry-Howard correspondence \cite{} which states that constructive proofs performed using the natural deduction calculus can be viewed as programs in the lambda calculus.  The process of exploiting this correspondence to produce a program from a proof is called program extraction. This technique allows for the development of programs that are correct by construction as the program comes with a proof that certifies its correctness. The Minlog theorem prover comes with a number specialisations for the purpose of extracting programs from formal proofs.
 \begin{comment}
 \textbf{Note: Add something about program extraction here.}
 Alternatively to automatic techniques for verification there are also interactive theorem provers which employ man-machine collaboration in order to prove properties over a system.
